--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,10 @@
     ::-webkit-scrollbar-thumb:hover {
         background: #cc6300;
     }
+    .app{
+        max-width: 100vw;
+        max-height: 100vh;
+    }
 }
 @font-face {
     font-family: yekan;
