fixed background image at all of screen size

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,9 +14,9 @@
     ::-webkit-scrollbar-thumb:hover {
         background: #cc6300;
     }
-    .app{
-        max-width: 100vw;
-        max-height: 100vh;
+    .app-container{
+        min-width: 100vw;
+        min-height: 100vh;
     }
 }
 @font-face {
