--- a/src/App.scss
+++ b/src/App.scss
@@ -15,8 +15,8 @@
         background: #cc6300;
     }
     .app-container{
-        min-width: 100vw;
-        min-height: 100vh;
+        max-width: 100vw;
+        max-height: 100vh;
     }
 }
 @font-face {
